<resources>
    <string name="title_activity_invisible" translatable="false">InvisibleActivity</string>

    <string name="app_name">Shortcut 4</string>
    <string name="action_settings">Theme</string>
    <string name="shortcut_notification_enabled">Shortcut Notification Enabled</string>
    <string name="notification_title">Shortcut app</string>
    <string name="btn_lock_notif">Loc</string>
    <string name="btn_volume_notif">Vol</string>
    <string name="btn_home_notif">Hom</string>
    <string name="btn_enable_shortcut_notification">Enable</string>
    <string name="btn_disable_shortcut_notification">Disable</string>
    <string name="welcome">Welcome !</string>
    <string name="welcom_main_page">Here you can add Shortcuts in notification view !!</string>
    <string name="notification_content">Swipe down for shortcuts.</string>
    <string name="title_activity_first_time_launch">Information</string>
    <string name="pref_themes_entries">pref_themes_entries</string>

    <string name="ok" translatable="false">OK</string>
    <string name="confirmMsg">Please check Notificatoin Listener and then Activate the app in the Device administrator. After that, the app will be ready to use.</string>

    <string name="choose_theme">Notification Theme</string>
    <string name="default_theme">Default Theme</string>
    <string name="default_bgn_gray_theme">Default Theme - Gray Background</string>
    <string name="blue_orb_theme">Blue Orb Theme</string>
    <string name="theme_blue_orb_bgn_gray">Blue Orb Theme - Gray Background</string>

    <string name="tips_uninstall">Tips Uninstall</string>
    <string name="help">Help</string>
    <string name="action_needed_to_uninstall_this_app">Action Required  for Uninstall</string>
    <string name="understood">Understood</string>
    <string name="uninstall_msg_actions">To unisntall this app: \n - Go to your Android Setting \n - Click on item \'Security\'\n - Click on item \'Admin Device\' \n - Finally Uncheck the app \'Shortcut4\'.</string>
    <string name="help_msg">(1) => Lock screen \n(2) => Home/Unlock\n(3) => Volume\n(4) => Tasks Manager</string>

</resources>
