<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_welcome_msg"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24dp" />

    <TextView android:text="@string/welcom_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_app"
        android:layout_below="@+id/title_welcome_msg"
        android:layout_alignStart="@+id/btnEnableDisable"
        android:layout_marginTop="38dp"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btnEnableDisable"
        android:text="@string/btn_enable_shortcut_notification"

        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/button_style"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="25"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
